# autosafe

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  README.md  REUSE.toml  prek.toml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: audit.yaml  prek.yaml  publish.yaml  pytest.yaml  ruff.yaml  ty.yaml
data/: .gitignore  REUSE.toml  WineQT.csv  hcas_state_variables.yml  vcas_state_variables.yml
docs/: Makefile  conf.py  index.rst  make.bat  odd_comparison_guide.rst
docs/pages/: comparison_methods.rst  developing.rst  installation.rst  tools.rst  usage.rst
experiments/: README.md  run_all_spec.yaml
experiments/dim_10d/: sampling_config.yaml
experiments/dim_11d/: sampling_config.yaml
experiments/dim_12d/: sampling_config.yaml
experiments/dim_2d/: sampling_config.yaml
experiments/dim_3d/: sampling_config.yaml
experiments/dim_4d/: sampling_config.yaml
experiments/dim_5d/: sampling_config.yaml
experiments/dim_6d/: sampling_config.yaml
experiments/dim_7d/: sampling_config.yaml
experiments/dim_8d/: sampling_config.yaml
experiments/dim_9d/: sampling_config.yaml
src/autosafe/: __init__.py  __main__.py  _affinity.py  _jax_config.py  preprocessing.py  sample.py  samples.py  typing.py
src/autosafe/cli/: __init__.py  app.py  experiments.py
src/autosafe/experiments/: __init__.py  evaluation.py
src/autosafe/kernels/: __init__.py  kernel.py  laplacian.py  rbf.py
src/autosafe/odd/: __init__.py
src/autosafe/odd/comparison/: __init__.py  base.py  cluster.py  density.py
src/autosafe/tools/: __init__.py  exporters.py  importers.py
src/autosafe/tools/comparison/: __init__.py  cli.py  core.py
src/autosafe/tools/evaluate/: __init__.py  cli.py  comparison.py  core.py  metrics.py  workflows.py
src/autosafe/tools/experiments/: __init__.py  core.py  evaluation.py  utils.py
src/autosafe/tools/monte_carlo/: __init__.py  _sample.py  app.py  comparison.py  dicts.py  evaluate.py  inequality_utils.py  plotting.py  sample.py
src/autosafe/tools/serializers/: __init__.py  kernels.py  msgspec.py  np_array.py  orjson.py  path.py  sample.py  samples.py
tests/: __init__.py  smoke.py  test_affinity_dual.py  test_cli_experiments.py  test_cli_experiments_spec.py  test_comparison.py  test_dataset_mode_calibration.py  test_evaluate.py  test_evaluate_comparison.py  test_experiments.py  test_exporters.py  test_importers.py  test_monte_carlo_comparison.py  test_monte_carlo_evaluate.py  test_monte_carlo_inequality_utils.py  test_monte_carlo_plotting.py  test_msgspec_hooks.py  test_orjson_serializers.py  test_preprocessing.py  test_sample.py  test_samples.py  test_sampling_helpers.py
tests/assets/sampling_configs/: .gitignore
tests/cli/: test_montecarlo_sample.py
tests/kernels/: test_abc_kernel.py  test_laplacian.py  test_rbf.py  test_rbf_calibration.py
